--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -13,6 +13,7 @@ android {
     }
 
     compileOptions {
+        encoding "UTF-8"
         sourceCompatibility JavaVersion.VERSION_1_7
         targetCompatibility JavaVersion.VERSION_1_7
     }
@@ -26,6 +27,8 @@ android {
 
 dependencies {
     compile 'com.android.support:appcompat-v7:22.1.1'
+    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.3'
+    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.3'
     compile 'com.jakewharton:butterknife:5.1.2'
     compile project(':library')
 }
