--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -5,19 +5,19 @@
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".SampleApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
             android:name="eu.inloop.viewmodel.sample.activity.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ViewPagerActivity"/>
+        <activity android:name=".activity.ViewPagerActivity" />
+        <activity android:name=".activity.SampleBindingActivity" />
     </application>
 
 </manifest>
