--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -1,6 +1,8 @@
 apply plugin: 'com.android.application'
 apply plugin: 'com.neenbedankt.android-apt'
 
+group='com.github.losonczitamas'
+
 android {
     compileSdkVersion 24
     buildToolsVersion '24.0.2'
@@ -37,6 +39,7 @@ dependencies {
     provided 'javax.annotation:jsr250-api:1.0'
 
     compile project(':library')
+
 
     testCompile 'junit:junit:4.12'
     testCompile 'org.mockito:mockito-core:2.1.0-RC.1'
