--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="eu.inloop.viewmodel.sample" >
+    package="com.tamaslosonczi.viewmodel.sample" >
 
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
-        android:name=".SampleApplication"
+        android:name="com.tamaslosonczi.viewmodel.sample.SampleApplication"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="eu.inloop.viewmodel.sample.activity.MainActivity"
+            android:name="com.tamaslosonczi.viewmodel.sample.activity.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -17,7 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ViewPagerActivity"/>
+        <activity android:name="com.tamaslosonczi.viewmodel.sample.activity.ViewPagerActivity"/>
     </application>
 
 </manifest>
