Update Gradle, fix annotation

--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -30,10 +30,11 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:support-fragment:26.1.0'
-    compile 'com.android.support:appcompat-v7:26.1.0'
-    debugCompile 'com.squareup.leakcanary:leakcanary-android:1.5.1'
-    releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
-    compile 'com.jakewharton:butterknife:5.1.2'
-    compile project(':library')
+    implementation 'com.android.support:support-fragment:26.1.0'
+    implementation 'com.android.support:appcompat-v7:26.1.0'
+    debugImplementation 'com.squareup.leakcanary:leakcanary-android:1.5.1'
+    releaseImplementation 'com.squareup.leakcanary:leakcanary-android-no-op:1.5.1'
+    implementation 'com.jakewharton:butterknife:8.8.1'
+    annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+    implementation project(':library')
 }
